--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -5,6 +5,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.13" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="NBitcoin" Version="5.0.83" />
   </ItemGroup>
