--- a/CryptoCurrency/log4net.config
+++ b/CryptoCurrency/log4net.config
@@ -1,23 +1,45 @@
-﻿<log4net>
+<log4net>
   <root>
     <level value="ALL" />
     <appender-ref ref="console" />
-    <appender-ref ref="file" />
+    <appender-ref ref="first" />
+    <appender-ref ref="second" />
   </root>
   <appender name="console" type="log4net.Appender.ConsoleAppender">
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date %level %logger - %message%newline" />
     </layout>
   </appender>
-  <appender name="file" type="log4net.Appender.RollingFileAppender">
-    <file value="myapp.log" />
+  <appender name="firstLogger" type="log4net.Appender.RollingFileAppender">
+    <file type="log4net.Util.PatternString" value="%property{log4net:HostName}-first.log" />
     <appendToFile value="true" />
     <rollingStyle value="Size" />
     <maxSizeRollBackups value="5" />
     <maximumFileSize value="10MB" />
     <staticLogFileName value="true" />
+    <preserveLogFileNameExtension value="true" />
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
     </layout>
   </appender>
+  <appender name="secondLogger" type="log4net.Appender.RollingFileAppender">
+    <file type="log4net.Util.PatternString" value="%property{log4net:HostName}-second.log" />
+    <appendToFile value="true" />
+    <rollingStyle value="Size" />
+    <maxSizeRollBackups value="5" />
+    <maximumFileSize value="10MB" />
+    <staticLogFileName value="true" />
+    <preserveLogFileNameExtension value="true" />
+    <layout type="log4net.Layout.PatternLayout">
+      <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+    </layout>
+  </appender>
+  <logger name="first" additivity="false">
+    <level value="ALL" />
+    <appender-ref ref="firstLogger" />
+  </logger>
+  <logger name="second" additivity="false">
+    <level value="ALL" />
+    <appender-ref ref="secondLogger" />
+  </logger>
 </log4net>
